--- a/index.html
+++ b/index.html
@@ -6,16 +6,17 @@
     <link rel="stylesheet" href="./src/st_globalStyles.css">
     <meta charset="utf-8">
     <meta name="viewport" content="width=1440, maximum-scale=1.0">
+    <meta name="description" content="An website desing made by Pratyush kumar">
     <meta name="og:type" content="website">
     <meta property="og:title" content="KRYPTO: Web desing by Pratyush">
-    <meta property="og:description" content="A description of your website content.">
+    <meta property="og:description" content="An website desing made by Pratyush kumar.">
     <meta property="og:url" content="https://ggkrypto.netlify.app">
-    <meta property="og:image" content="./img/cover.png">
+    <meta property="og:image" content="https://ggkrypto.netlify.app/img/cover.png">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="KRYPTO: Web desing by Pratyush">
-    <meta name="twitter:description" content="A description of your website content.">
-    <meta name="twitter:image" content="./img/cover.png">
-    <meta name="author" content="Your Name or Company">
+    <meta name="twitter:description" content="An website desing made by Pratyush kumar.">
+    <meta name="twitter:image" content="https://ggkrypto.netlify.app/img/cover.png">
+    <meta name="author" content="Pratyush kumar">
     <meta name="keywords" content="web development, programming, HTML, CSS, JavaScript">
     <meta name="robots" content="index, follow">
     <meta name="theme-color" content="#000000">
